--- a/src/css/index.css
+++ b/src/css/index.css
@@ -78,6 +78,31 @@ html, body {
   justify-content: center;
 }
 
+.pageContainer .navBarMobile {
+  height: auto;
+  width: 100%;
+  background-color: transparent;
+  overflow-y: hidden;
+
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+
+  align-items: center;
+  justify-content: center;
+
+  -webkit-transition: height 0.8s ease-in-out;
+  -moz-transition: height 0.8s ease-in-out;
+  -ms-transition: height 0.8s ease-in-out;
+  -o-transition: height 0.8s ease-in-out;
+  transition: height 0.8s
+}
+
 .pageContainer .navBar {
   height: calc(100% - 100px);
   width: 0;
@@ -104,12 +129,12 @@ html, body {
 }
 
 
-.navBar .navBarItemContainer {
+.navBarItemContainer {
   white-space: nowrap;
   margin: 15px;
 }
 
-.navBar .navBarItemContainer .navBarItem {
+.navBarItemContainer .navBarItem {
   margin: 0;
   font-family: sanFran;
   font-size: 20px;
@@ -129,7 +154,7 @@ html, body {
   transform: translateZ(0);
 }
 
-.navBar .navBarItemContainer .navBarItem:hover {
+.navBarItemContainer .navBarItem:hover {
   cursor: pointer;
   text-shadow: 0 0 2.5px #fff, 0 0 5px #fff, 0 0 7.5px #fff, 0 0 10px #C495F0, 0 0 17.5px #C495F0, 0 0 20px #C495F0, 0 0 25px #C495F0, 0 0 37.5px #C495F0;
 }
@@ -148,12 +173,18 @@ html, body {
 .pageContainer .landingpage {
   height: 100%;
   width: 100%;
+
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
 }
 
 .informationButtonContainer {
   height: 50px;
   width: 100%;
   position: relative;
+  bottom: 0;
 }
 
 .informationButtonContainer .informationButton {
@@ -186,7 +217,6 @@ html, body {
 	align-items: center;
   justify-content: center;
 
-  overflow-y: auto;
 }
 
 .contentContainer .contactContainer {
