--- a/src/css/index.css
+++ b/src/css/index.css
@@ -121,11 +121,11 @@ html, body {
   align-items: center;
   justify-content: center;
 
-  -webkit-transition: width 0.8s ease-in-out;
-  -moz-transition: width 0.8s ease-in-out;
-  -ms-transition: width 0.8s ease-in-out;
-  -o-transition: width 0.8s ease-in-out;
-  transition: width 0.8s
+  -webkit-transition: width 1s ease-in-out;
+  -moz-transition: width 1s ease-in-out;
+  -ms-transition: width 1s ease-in-out;
+  -o-transition: width 1s ease-in-out;
+  transition: width 1s
 }
 
 
@@ -338,7 +338,12 @@ html, body {
   border-radius: .5em;
   border: 1px solid white;
 
-  background-color: rgba(255, 255, 255, 0.97);
+  -webkit-box-shadow: 0px 0px 5px 6px grey;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow:    0px 0px 5px 6px grey;  /* Firefox 3.5 - 3.6 */
+  box-shadow: 0 0 2.5px #fff, 0 0 5px #fff, 0 0 7.5px #fff, 0 0 10px #228DFF, 0 0 17.5px #228DFF, 0 0 20px #228DFF, 0 0 25px #228DFF, 0 0 37.5px #228DFF;
+
+
+  background-color: rgba(255, 255, 255, 0.96);
 }
 .contentContainer .aboutMeDisplayScreen {
   height: calc(100% - 80px);
@@ -598,6 +603,8 @@ html, body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  text-align: justify;
 
 }
 
