--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,49 +27,6 @@
     width: 100%;
   }
 }
-
-@keyframes glitch-anim {
-  0% {
-    clip: rect(70px, 450px, 76px, 0);
-  }
-  20% {
-    clip: rect(29px, 450px, 16px, 0);
-  }
-  40% {
-    clip: rect(76px, 450px, 3px, 0);
-  }
-  60% {
-    clip: rect(42px, 450px, 78px, 0);
-  }
-  80% {
-    clip: rect(15px, 450px, 13px, 0);
-  }
-  100% {
-    clip: rect(53px, 450px, 5px, 0);
-  }
-}
-
-@keyframes glitch-anim-2 {
-  0% {
-    clip: rect(70px, 450px, 76px, 0);
-  }
-  20% {
-    clip: rect(29px, 450px, 16px, 0);
-  }
-  40% {
-    clip: rect(76px, 450px, 3px, 0);
-  }
-  60% {
-    clip: rect(42px, 450px, 78px, 0);
-  }
-  80% {
-    clip: rect(15px, 450px, 13px, 0);
-  }
-  100% {
-    clip: rect(53px, 450px, 5px, 0);
-  }
-}
-
 html {
   height: 100%;
   margin: 0;
@@ -683,10 +640,19 @@ body {
   font-family: moon;
   color: white;
   margin: 15px 0 0 0;
-  position: relative;
   -webkit-animation: neonBlue 2s ease-in-out infinite alternate;
   -moz-animation: neonBlue 2s ease-in-out infinite alternate;
   animation: neonBlue 2s ease-in-out infinite alternate;
+}
+
+.nameDisplay {
+ font-size: 100px;
+ font-family: moon;
+ color: white;
+ margin: 15px 0 0 0;
+ -webkit-animation: neonBlue 2s ease-in-out infinite alternate;
+ -moz-animation: neonBlue 2s ease-in-out infinite alternate;
+ animation: neonBlue 2s ease-in-out infinite alternate;
 }
 
  .displayAttributes {
@@ -753,4 +719,19 @@ body {
   -moz-animation: sliderWidth 2s ease-in-out infinite normal;
   animation: sliderWidth 2s ease-in-out infinite normal;
 
+}
+
+.background-enter {
+  transform: translate(100%);
+}
+.background-enter.background-enter-active {
+  transform: translate(0%);
+  transition: transform 1000ms ease-in-out;
+}
+.background-leave {
+  transform: translate(0%);
+}
+.background-leave.background-leave-active {
+  transform: translate(-100%);
+  transition: transform 1000ms ease-in-out;
 }
