--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,6 +27,64 @@
     width: 100%;
   }
 }
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@keyframes fadeout {
+  from { opacity: 1; }
+  to   { opacity: 0; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadeout {
+  from { opacity: 1; }
+  to   { opacity: 0; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadeout {
+  from { opacity: 1; }
+  to   { opacity: 0; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadeout {
+  from { opacity: 1; }
+  to   { opacity: 0; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
 html {
   height: 100%;
   margin: 0;
@@ -159,7 +217,7 @@ body {
 
 .navBarItemContainer .navBarItem:hover {
   cursor: pointer;
-  text-shadow: 0 0 2.5px #fff, 0 0 5px #fff, 0 0 7.5px #fff, 0 0 10px #C495F0, 0 0 17.5px #C495F0, 0 0 20px #C495F0, 0 0 25px #C495F0, 0 0 37.5px #C495F0;
+  text-shadow: 0 0 2.5px #fff, 0 0 5px #fff, 0 0 7.5px #fff, 0 0 10px #25DAE3, 0 0 17.5px #25DAE3, 0 0 20px #25DAE3, 0 0 25px #25DAE3, 0 0 37.5px #25DAE3;
 }
 
 .navBarItem a {
@@ -294,7 +352,6 @@ body {
 
   align-items: center;
   justify-content: space-around;
-
 }
 
 .projectItemContainer .projectViewContainer {
@@ -324,8 +381,24 @@ body {
   color: #E6E6E6;
 }
 
-.projectItemContainer .imageContainer {
+.projectItemContainer .imageContainerFadeIn {
   height: 600px;
+
+  -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 0.5s; /* Firefox < 16 */
+  -ms-animation: fadein 0.5s; /* Internet Explorer */
+  -o-animation: fadein 0.5s; /* Opera < 12.1 */
+  animation: fadein 0.5s;
+}
+
+.projectItemContainer .imageContainerNoFade{
+  height: 600px;
+
+  -webkit-animation: fadeout 0.7s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadeout 0.7s; /* Firefox < 16 */
+  -ms-animation: fadeout 0.7s; /* Internet Explorer */
+  -o-animation: fadeout 0.7s; /* Opera < 12.1 */
+  animation: fadeout 0.7s;
 }
 
 .projectItemContainer .projectImage {
