--- a/src/css/index.css
+++ b/src/css/index.css
@@ -376,6 +376,18 @@ body {
   color: #E6E6E6;
 }
 
+.projectTitle .gitHubTitleLink {
+  font-size: 30px;
+  padding-right: 10px;
+  text-decoration: none;
+  color: rgb(54, 218, 226)
+}
+
+.projectTitle .gitHubTitleLink:visited {
+  text-decoration: none;
+  color: rgb(54, 218, 226)
+}
+
 .projectItemContainer .projectDescription {
   font-family: sanFran;
   font-size: 20px;
@@ -458,6 +470,8 @@ body {
 }
 
 .projectItemContainer .projectImage {
+  padding-bottom: 25px;
+
   -webkit-transition: width 1s ease-in-out;
   -moz-transition: width 1s ease-in-out;
   -ms-transition: width 1s ease-in-out;
