--- a/src/css/index.css
+++ b/src/css/index.css
@@ -424,6 +424,24 @@ body {
   border-radius: 1em;
 }
 
+.descriptionContainer .imageHolderContainer {
+  min-height: 600px;
+
+  padding-bottom: 20px;
+
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+
+  align-items: center;
+  justify-content: center;
+}
+
 .descriptionContainer .fullDescriptionContainer {
   width: 700px;
 
