--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -140,6 +140,13 @@
   color: rgb(54, 218, 226)
 }
 
+.projectTitle .moreInfoTitleLink {
+  font-size: 25px;
+  padding-left: 10px;
+  text-decoration: none;
+  color: rgb(54, 218, 226)
+}
+
 .projectTitle .gitHubTitleLink:visited {
   text-decoration: none;
   color: rgb(54, 218, 226)
