--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -472,6 +472,11 @@
   flex-direction: column;
   height: calc(100% - 50px);
   width:inherit;
+
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 90px;
 }
 
 .mobileAboutMeWorkPath .mobileResumeLinkContainer {
@@ -487,11 +492,16 @@
 
   align-items: center;
   justify-content: center;
+
+  position: absolute;
+  bottom: 0;
+  left:25%;
+  right:25%;
 }
 
 .mobileResumeLinkContainer .mobileResumeLinkText {
   font-family: sanFran;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 .mobileResumeLinkText .mobileResumeLinkText {
@@ -500,13 +510,12 @@
 }
 
 .mobileAboutMeWorkPath .mobileWorkContainer {
-  width: 100%;
-  height: 500px;
-
+  height:300px;
+  
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 
   -ms-flex-align: center;
   -webkit-align-items: center;
@@ -518,14 +527,12 @@
 
 .mobileWorkContainer .mobileWorkImage {
   border-radius: 0.5em;
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
+  margin:20px;
 }
 
 .mobileWorkContainer .mobileWorkTypeContainer {
-  width: 150px;
-  height: 120px;
-
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -534,10 +541,31 @@
   justify-content: center;
 }
 
-.mobileWorkTypeContainer .mobileCompanyNameText {
+.mobileWorkTypeContainer .mobileCompanyNameTextContainer {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.mobileCompanyNameTextContainer .mobileJobDetailsContainer {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+}
+
+.mobileJobDetailsContainer .mobileCompanyNameText {
   font-family: sanFran;
-  font-size: 15px;
-  margin-bottom: 10px;
+  font-size: 14px;
+  margin-bottom: 2px;
 }
 
 .mobileWorkTypeContainer .companyJobText {
@@ -546,8 +574,6 @@
 }
 
 .mobileWorkContainer .mobileWorkTaskContainer {
-  width: 300px;
-  height: 120px;
 
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -556,6 +582,8 @@
   justify-content: center;
 
   text-align: justify;
+
+  margin: 20px;
 
 }
 
