--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -560,7 +560,7 @@
   display: -webkit-flex;
   display: flex;
   flex-direction: column;
-  margin:10px;
+  padding:10px;
 }
 
 .mobileJobDetailsContainer .mobileCompanyNameText {
