--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -553,6 +553,7 @@
 
   align-items: center;
   justify-content: space-evenly;
+  padding-bottom: 20px;
 }
 
 .mobileCompanyNameTextContainer .mobileJobDetailsContainer {
