--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -510,7 +510,7 @@
 }
 
 .mobileAboutMeWorkPath .mobileWorkContainer {
-  height:300px;
+  min-height:300px;
 
   display: -ms-flexbox;
   display: -webkit-flex;
