--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -596,7 +596,7 @@
 
 .mobileAboutMeDisplayScreen .highcharts-title {
   font-family: sanFran;
-  font-size: 15px !important;
+  font-size: 20px !important;
 }
 
 .mobileAboutMeDisplayScreen .highcharts-background {
@@ -607,9 +607,9 @@
   display: none;
 }
 
-.mobileAboutMeDisplayScreen .highcharts-label {
+.mobileAboutMeDisplayScreen .highcharts-label text{
   font-family: sanFran;
-  font-size: 12px !important;
+  font-size: 10px !important;
 }
 
 .slide-pane__header {
